--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "grunt-ng-annotate": "^2.0.2",
     "jshint": "^2.6.3",
     "lodash": "^3.10.1",
-    "typescript":"^1.7.3"
+    "typescript": "^1.7.3"
   },
   "dependencies": {
+    "angular-ui-router": "^0.3.1",
     "lodash": "^3.10.1"
   }
 }
